--- a/Api/Demo.Api/appsettings.json
+++ b/Api/Demo.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DbConnection": "Data Source=localhost;Initial Catalog=demo;User ID=sa;Password=P@$$w0rd;Trusted_Connection=True;TrustServerCertificate=True"
-  },
+    "ConnectionStrings": {
+        "DbConnection": "Data Source=app-northwind-api-1-server.database.windows.net;Initial Catalog=demo;User ID=app-northwind-api-1-server-admin;Password=Pass!234;"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
