--- a/.github/workflows/master_app-northwind-api-1.yml
+++ b/.github/workflows/master_app-northwind-api-1.yml
@@ -22,6 +22,9 @@ jobs:
           dotnet-version: '8.x'
           include-prerelease: true
 
+      - name: Restore workload
+        run: dotnet workload restore
+        
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
