App Insights configured

--- a/Api/Demo.Api/appsettings.json
+++ b/Api/Demo.Api/appsettings.json
@@ -1,12 +1,15 @@
 {
-    "ConnectionStrings": {
-        "DbConnection": "Data Source=app-northwind-api-1-server.database.windows.net;Initial Catalog=demo;User ID=app-northwind-api-1-server-admin;Password=Pass!234;"
-    },
+  "ConnectionStrings": {
+    "DbConnection": "Data Source=app-northwind-api-1-server.database.windows.net;Initial Catalog=demo;User ID=app-northwind-api-1-server-admin;Password=Pass!234;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=273e51a5-522c-4992-9d03-1fe2b312f754;IngestionEndpoint=https://italynorth-0.in.applicationinsights.azure.com/;LiveEndpoint=https://italynorth.livediagnostics.monitor.azure.com/"
+  }
 }
