--- a/Api/Demo.Api/Demo.Api.csproj
+++ b/Api/Demo.Api/Demo.Api.csproj
@@ -4,9 +4,12 @@
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationInsightsResourceId>/subscriptions/e7665c74-e548-4377-862e-468503918ca2/resourceGroups/rg-northwind-1/providers/microsoft.insights/components/DemoApi-ai</ApplicationInsightsResourceId>
+    <UserSecretsId>19b270cb-f04d-41e4-90a8-c0afc0ebdfff</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.11">
